added WebUI dependencies

--- a/TheStrengthCard/WebUI/appsettings.json
+++ b/TheStrengthCard/WebUI/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "StrengthCard" "Host=fanny.db.elephantsql.com;Username=wxqloxgo;Password=S6Ltf9TMGar_wSFzb9xkEaHYzlLtvShU;Database=wxqloxgo"
+  }
 }
