--- a/TheStrengthCard/DL/DL.csproj
+++ b/TheStrengthCard/DL/DL.csproj
@@ -14,6 +14,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.10" />
     <PackageReference Include="Serilog" Version="2.10.0" />
   </ItemGroup>
 
