--- a/TheStrengthCard/WebUI/WebUI.csproj
+++ b/TheStrengthCard/WebUI/WebUI.csproj
@@ -16,7 +16,7 @@
   <ItemGroup>
     <ProjectReference Include="..\DL\DL.csproj" />
     <ProjectReference Include="..\Models\Models.csproj" />
-    <ProjectReference Include="..\SBL\StoreBL.csproj" />
+    <ProjectReference Include="..\SBL\SBL.csproj" />
     <ProjectReference Include="..\Tests\Tests.csproj" />
   </ItemGroup>
 
