--- a/TheStrengthCard/WebUI/appsettings.json
+++ b/TheStrengthCard/WebUI/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "StrengthCard" "Host=fanny.db.elephantsql.com;Username=wxqloxgo;Password=S6Ltf9TMGar_wSFzb9xkEaHYzlLtvShU;Database=wxqloxgo"
+    "StrengthCard": "Host=fanny.db.elephantsql.com;Username=wxqloxgo;Password=S6Ltf9TMGar_wSFzb9xkEaHYzlLtvShU;Database=wxqloxgo"
   }
 }
