--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions 
 
-name: Build and deploy ASP.Net Core app to Azure Web App - PopShopDemo
+name: Build and deploy ASP.Net Core app to Azure Web App
 
 on:
   push:
@@ -93,5 +93,5 @@ jobs:
         with:
           app-name: 'PopShopDemo'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.PUBLISHSETTINGS }}
+          publish-profile: ${{ secrets.DATABASE }}
           package: .
