Searching for customers, ordering orders.

--- a/DL/DL.csproj
+++ b/DL/DL.csproj
@@ -20,6 +20,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+	<DocumentationFile>$(AssemblyName)-doc.xml</DocumentationFile>
   </PropertyGroup>
 
 </Project>
